--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -135,6 +135,7 @@
                 android:fontFamily="@font/roboto_thin"
                 android:text="@string/CVQuizzDetailTheme"
                 android:textSize="20sp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />
@@ -371,7 +372,7 @@
 
                 android:layout_marginEnd="8dp"
                 android:orientation="horizontal"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
 
                 app:layout_constraintHorizontal_bias="0.0"
@@ -393,7 +394,7 @@
                     app:layout_constraintHorizontal_weight="0.3"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:srcCompat="@drawable/icon_image" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guideline7"
@@ -407,13 +408,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:src="@drawable/quizz1_02"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/guideline8"
                     app:layout_constraintHorizontal_weight="0.3"
-                    app:layout_constraintStart_toStartOf="@+id/guideline7" />
+                    app:layout_constraintStart_toStartOf="@+id/guideline7"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/icon_image" />
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guideline8"
@@ -433,11 +437,10 @@
                     android:src="@drawable/quizz1_03"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintHorizontal_weight="0.3"
                     app:layout_constraintStart_toStartOf="@+id/guideline8"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:srcCompat="@drawable/icon_image" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.constraint.ConstraintLayout>
